syntax = "proto3";

package rdap;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service RDAP {
    rpc DomainLookup (LookupRequest) returns (DomainResponse);
    rpc EntityLookup (LookupRequest) returns (EntityResponse);
    rpc NameServerLookup (LookupRequest) returns (NameServerResponse);
    rpc DomainSearch (DomainSearchRequest) returns (DomainSearchResponse);
    rpc EntitySearch (EntitySearchRequest) returns (EntitySearchResponse);
    rpc NameServerSearch (NameServerSearchRequest) returns (NameServerSearchResponse);
}

message LookupRequest {
    string query = 1;
}

message DomainSearchRequest {
    oneof query {
        string name = 1;
        string ns_name = 2;
        string ns_ip = 3;
    }
}

message EntitySearchRequest {
    oneof query {
        string name = 1;
        string handle = 2;
    }
}

message NameServerSearchRequest {
    oneof query {
        string name = 1;
        string ip = 2;
    }
}

message ErrorResponse {
    int32 error_code = 1;
    string title = 2;
    string description = 3;
}

message RedirectResponse {
    string rdap_uri = 1;
    string port43 = 2;
}

message DomainResponse {
    oneof response {
        Domain success = 1;
        RedirectResponse redirect = 2;
        ErrorResponse error = 3;
    }
}

message DomainSearchResponse {
    message Domains {
        repeated Domain data = 1;
    }

    oneof response {
        Domains success = 1;
        RedirectResponse redirect = 2;
        ErrorResponse error = 3;
    }
}

message EntityResponse {
    oneof response {
        Entity success = 1;
        RedirectResponse redirect = 2;
        ErrorResponse error = 3;
    }
}

message EntitySearchResponse {
    message Entities {
        repeated Entity data = 1;
    }

    oneof response {
        Entities success = 1;
        RedirectResponse redirect = 2;
        ErrorResponse error = 3;
    }
}

message NameServerResponse {
    oneof response {
        NameServer success = 1;
        RedirectResponse redirect = 2;
        ErrorResponse error = 3;
    }
}

message NameServerSearchResponse {
    message NameServers {
        repeated NameServer data = 1;
    }

    oneof response {
        NameServers success = 1;
        RedirectResponse redirect = 2;
        ErrorResponse error = 3;
    }
}

enum EventAction {
    EventRegistration = 0;
    EventReregistration = 1;
    EventLastChanged = 2;
    EventExpiration = 3;
    EventDeletion = 4;
    EventReinstantiation = 5;
    EventTransfer = 6;
    EventLocked = 7;
    EventUnlocked = 8;
    EventRegistrarExpiration = 9;
    EventLastUpdateOfRDAP = 10;
}

message Event {
    EventAction action = 1;
    google.protobuf.Timestamp date = 2;
    google.protobuf.StringValue actor = 3;
}

enum EntityRole {
    RoleRegistrant = 0;
    RoleTechnical = 1;
    RoleAdministrative = 2;
    RoleAbuse = 3;
    RoleBilling = 4;
    RoleRegistrar = 5;
    RoleReseller = 6;
    RoleSponsor = 7;
    RoleProxy = 8;
    RoleNotifications = 9;
    RoleNOC = 10;
}

enum Status {
    StatusActive = 0;
    StatusValidated = 1;
    StatusRenewProhibited = 2;
    StatusUpdateProhibited = 3;
    StatusTransferProhibited = 4;
    StatusDeleteProhibited = 5;
    StatusProxy = 6;
    StatusPrivate = 7;
    StatusRemoved = 8;
    StatusObscured = 9;
    StatusAssociated = 10;
    StatusInactive = 11;
    StatusLocked = 12;
    StatusPendingCreate = 13;
    StatusPendingRenew = 14;
    StatusPendingTransfer = 15;
    StatusPendingUpdate = 16;
    StatusPendingDelete = 17;
    StatusPendingRestore = 18;
    StatusAddPeriod = 19;
    StatusAutoRenewPeriod = 20;
    StatusRenewPeriod = 21;
    StatusRedemptionPeriod = 22;
    StatusTransferPeriod = 23;
    StatusClientRenewProhibited = 24;
    StatusClientUpdateProhibited = 25;
    StatusClientTransferProhibited = 26;
    StatusClientDeleteProhibited = 27;
    StatusClientHold = 28;
    StatusServerRenewProhibited = 29;
    StatusServerUpdateProhibited = 30;
    StatusServerTransferProhibited = 31;
    StatusServerDeleteProhibited = 32;
    StatusServerHold = 33;
}

message PublicID {
    string type = 1;
    string identifier = 2;
}

message Remark {
    google.protobuf.StringValue title = 1;
    google.protobuf.StringValue type = 2;
    string description = 3;
}

message JSCard {
    message Resource {
        string uri = 1;
        google.protobuf.StringValue media_type = 2;
        Context context = 3;
        google.protobuf.UInt32Value preference = 4;
        google.protobuf.StringValue label = 5;
    }

    enum Kind {
        NotSet = 0;
        Individual = 1;
        Group = 2;
        Org = 3;
        Location = 4;
        Device = 5;
        Application = 6;
    }

    message Pronounce {
        string phonetics = 1;
        google.protobuf.StringValue script = 2;
        google.protobuf.StringValue system = 3;
    }

    message Context {
        bool private = 1;
        bool work = 2;
        bool billing = 3;
        bool delivery = 4;
    }

    message Name {
        message NameComponent {
            enum Kind {
                Given = 0;
                Middle = 1;
                Surname = 2;
                Surname2 = 3;
                Title = 4;
                Credential = 5;
                Generation = 6;
                Separator = 7;
            }

            string value = 1;
            Kind kind = 2;
            Pronounce pronounce = 3;
        }

        repeated NameComponent components = 1;
        google.protobuf.StringValue default_separator = 2;
        google.protobuf.StringValue full_name = 3;
        Pronounce pronounce = 4;
    }

    message NickName {
        string name = 1;
        Context context = 2;
        google.protobuf.UInt32Value preference = 3;
    }

    message Organisation {
        message OrganisationUnit {
            string name = 1;
            google.protobuf.StringValue sort_as = 2;
        }

        google.protobuf.StringValue name = 1;
        repeated OrganisationUnit units = 2;
        google.protobuf.StringValue sort_as = 3;
        Context context = 4;
    }

    message SpeakToAs {
        enum GrammaticalGender {
            NotSet = 0;
            Common = 1;
            Animate = 2;
            Inanimate = 3;
            Feminine = 4;
            Masculine = 5;
            Neuter = 6;
        }

        message Pronouns {
            string pronouns = 1;
            Context context = 2;
            google.protobuf.UInt32Value preference = 3;
        }

        GrammaticalGender grammatical_gender = 1;
        map<string, Pronouns> pronouns = 2;
    }

    message Title {
        enum Kind {
            Title = 0;
            Role = 1;
        }

        string name = 1;
        Kind kind = 2;
        google.protobuf.StringValue organization = 3;
    }

    message Email {
        string email = 1;
        Context context = 2;
        google.protobuf.UInt32Value preference = 3;
        google.protobuf.StringValue label = 4;
    }

    message OnlineService {
        google.protobuf.StringValue service = 1;
        google.protobuf.StringValue uri = 2;
        google.protobuf.StringValue user = 3;
        Context context = 4;
        google.protobuf.UInt32Value preference = 5;
        google.protobuf.StringValue label = 6;
    }

    message Phone {
        enum Feature {
            Mobile = 0;
            Voice = 1;
            Text = 2;
            Video = 3;
            MainNumber = 4;
            Textphone = 5;
            Fax = 6;
            Pager = 7;
        }

        string number = 1;
        repeated Feature features = 2;
        Context context = 3;
        google.protobuf.UInt32Value preference = 4;
        google.protobuf.StringValue label = 5;
    }

    message LanguagePreferences {
        message LanguagePreference {
            Context context = 1;
            google.protobuf.UInt32Value preference = 2;
        }

        repeated LanguagePreference preferences = 1;
    }

    message Calendar {
        enum Kind {
            Calendar = 0;
            FreeBusy = 1;
        }

        Resource resource = 1;
        Kind kind = 2;
    }

    message SchedulingAddress {
        string uri = 1;
        Context context = 2;
        google.protobuf.UInt32Value preference = 3;
        google.protobuf.StringValue label = 4;
    }

    message Address {
        message AddressComponent {
            enum Kind {
                Room = 0;
                Apartment = 1;
                Floor = 2;
                Building = 3;
                Number = 4;
                Name = 5;
                Block = 6;
                SubDistrict = 7;
                District = 8;
                Locality = 9;
                Region = 10;
                Postcode = 11;
                Country = 12;
                Direction = 13;
                Landmark = 14;
                PostOfficeBox = 15;
                Separator = 16;
            }

            string value = 1;
            Kind kind = 2;
            Pronounce pronounce = 3;
        }

        repeated AddressComponent components = 1;
        google.protobuf.StringValue country_code = 2;
        google.protobuf.StringValue coordinates = 3;
        google.protobuf.StringValue timezone = 4;
        Context context = 5;
        google.protobuf.StringValue full = 6;
        Pronounce pronounce = 7;
        google.protobuf.StringValue default_seperator = 8;
        google.protobuf.UInt32Value preference = 9;
    }

    message Directory {
        enum Kind {
            Directory = 0;
            Entry = 1;
        }

        Resource resource = 1;
        Kind kind = 2;
        google.protobuf.UInt32Value list_as = 3;
    }

    message Link {
        enum Kind {
            Contact = 0;
        }

        Resource resource = 1;
        Kind kind = 2;
    }

    message Media {
        enum Kind {
            Photo = 0;
            Sound = 1;
            Logo = 2;
        }

        Resource resource = 1;
        Kind kind = 2;
    }

    message Anniversary {
        enum Kind {
            Birth = 0;
            Death = 1;
            Wedding = 2;
        }

        message PartialDate {
            google.protobuf.UInt32Value year = 1;
            google.protobuf.UInt32Value month = 2;
            google.protobuf.UInt32Value day = 3;
            google.protobuf.StringValue calendar_scale = 4;
        }

        Kind kind = 1;
        oneof date {
            google.protobuf.Timestamp timestamp = 2;
            PartialDate partial_date = 3;
        }
        Address place = 4;
    }

    message Note {
        message Author {
            google.protobuf.StringValue name = 1;
            google.protobuf.StringValue uri = 2;
        }

        string note = 1;
        google.protobuf.Timestamp created = 2;
        Author author = 3;
    }

    message PersonalInfo {
        enum Kind {
            Expertise = 0;
            Hobby = 1;
            Interest = 2;
        }

        enum Level {
            NotSet = 0;
            High = 1;
            Medium = 2;
            Low = 3;
        }

        Kind kind = 1;
        string value = 2;
        Level level = 3;
        google.protobuf.UInt32Value list_as = 4;
        google.protobuf.StringValue label = 5;
    }

    string uid = 1;
    google.protobuf.Timestamp created = 2;
    google.protobuf.Timestamp updated = 3;
    Kind kind = 4;
    google.protobuf.StringValue language = 5;
    repeated string members = 6;
    google.protobuf.StringValue product_id = 7;
    Name name = 8;
    map<string, NickName> nick_names = 9;
    map<string, Organisation> organisations = 10;
    SpeakToAs speak_to_as = 11;
    map<string, Title> titles = 12;
    map<string, Email> emails = 13;
    map<string, OnlineService> online_services = 14;
    map<string, Phone> phones = 15;
    map<string, LanguagePreferences> preferred_languages = 16;
    map<string, Calendar> calendars = 17;
    map<string, SchedulingAddress> scheduling_addresses = 18;
    map<string, Address> addresses = 19;
    map<string, Resource> crypto_keys = 20;
    map<string, Directory> directories = 21;
    map<string, Link> links = 22;
    map<string, Media> media = 23;
    map<string, Anniversary> anniversaries = 24;
    repeated string keywords = 25;
    map<string, Note> notes = 26;
    map<string, PersonalInfo> personal_info = 27;
}

message Entity {
    reserved 2;
    string handle = 1;
    JSCard js_card = 10;
    repeated EntityRole roles = 3;
    repeated PublicID public_ids = 4;
    repeated Entity entities = 5;
    repeated Remark remarks = 6;
    repeated Event events = 7;
    repeated Status statuses = 8;
    google.protobuf.StringValue port43 = 9;
}

message Domain {
    message SecDNS {
        message DSData {
            int32 key_tag = 1;
            int32 algorithm = 2;
            int32 digest_type = 3;
            string digest = 4;
        }

        message KeyData {
            int32 flags = 1;
            int32 protocol = 2;
            int32 algorithm = 3;
            string public_key = 4;
        }

        google.protobuf.BoolValue zone_signed = 1;
        google.protobuf.BoolValue delegation_signed = 2;
        google.protobuf.Int64Value max_sig_life = 3;
        repeated DSData ds_data = 4;
        repeated KeyData key_data = 5;
    }

    string handle = 1;
    string name = 2;
    repeated Event events = 3;
    repeated NameServer name_servers = 4;
    repeated PublicID public_ids = 5;
    repeated Entity entities = 6;
    repeated Status statuses = 7;
    repeated Remark remarks = 8;
    google.protobuf.StringValue port43 = 9;
    SecDNS sec_dns = 10;
}

message NameServer {
    string handle = 1;
    string name = 2;
    repeated Event events = 3;
    IpAddresses ip_addresses = 4;
    repeated Entity entities = 5;
    repeated Status statuses = 6;
    repeated Remark remarks = 7;
    google.protobuf.StringValue port43 = 8;
}

message IpAddresses {
    repeated string v4 = 1;
    repeated string v6 = 2;
}